SERVER-29397 Ensure user inserted invalid config.tags documents cause the auto-balancer to error rather than invariant

(cherry picked from commit 1340d505df3eb777cbe1684d53c64848052b7151)