src/mongo/s/catalog/type_tags.cpp
@@ -34,6 +34,7 @@
 #include "mongo/bson/bsonobj.h"
 #include "mongo/bson/bsonobjbuilder.h"
 #include "mongo/bson/util/bson_extract.h"
+#include "mongo/s/catalog/type_chunk.h"
 #include "mongo/util/assert_util.h"
 #include "mongo/util/mongoutils/str.h"
 
@@ -55,8 +56,9 @@ StatusWith<TagsType> TagsType::fromBSON(const BSONObj& source) {
     {
         std::string tagsNs;
         Status status = bsonExtractStringField(source, ns.name(), &tagsNs);
-        if (!status.isOK())
+        if (!status.isOK()) {
             return status;
+        }
 
         tags._ns = tagsNs;
     }
@@ -64,28 +66,21 @@ StatusWith<TagsType> TagsType::fromBSON(const BSONObj& source) {
     {
         std::string tagsTag;
         Status status = bsonExtractStringField(source, tag.name(), &tagsTag);
-        if (!status.isOK())
+        if (!status.isOK()) {
             return status;
+        }
 
         tags._tag = tagsTag;
     }
 
     {
-        BSONElement tagsMinKey;
-        Status status = bsonExtractTypedField(source, min.name(), Object, &tagsMinKey);
-        if (!status.isOK())
-            return status;
+        auto tagRangeStatus = ChunkRange::fromBSON(source);
+        if (!tagRangeStatus.isOK())
+            return tagRangeStatus.getStatus();
 
-        tags._minKey = tagsMinKey.Obj().getOwned();
-    }
-
-    {
-        BSONElement tagsMaxKey;
-        Status status = bsonExtractTypedField(source, max.name(), Object, &tagsMaxKey);
-        if (!status.isOK())
-            return status;
-
-        tags._maxKey = tagsMaxKey.Obj().getOwned();
+        const auto tagRange = std::move(tagRangeStatus.getValue());
+        tags._minKey = tagRange.getMin().getOwned();
+        tags._maxKey = tagRange.getMax().getOwned();
     }
 
     return tags;
