src/mongo/s/catalog/type_tags_test.cpp
@@ -117,9 +117,8 @@ TEST(TagsType, KeysNotAscending) {
         BSON(TagsType::tag("tag") << TagsType::ns("test.mycol") << TagsType::min(BSON("a" << 20))
                                   << TagsType::max(BSON("a" << 10)));
 
-    StatusWith<TagsType> status = TagsType::fromBSON(obj);
-    const TagsType& tag = status.getValue();
-    ASSERT_EQUALS(ErrorCodes::BadValue, tag.validate());
+    StatusWith<TagsType> tagStatus = TagsType::fromBSON(obj);
+    ASSERT_EQUALS(ErrorCodes::FailedToParse, tagStatus.getStatus());
 }
 
 TEST(TagsType, BadType) {
